Update Main class for simulation functionality
Refactored Main class to integrate simulation engine and controller.